Implement shopping category source initiative
